shooting-game/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shooting-game
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shooting-game
  template:
    metadata:
      labels:
        app: shooting-game
    spec:
      containers:
      - name: shooting-game
        image: ahmadki123/shooting-game:latest

        env: ✅ (THIS IS THE RIGHT PLACE)
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name

        ports:
        - containerPort: 80

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
