shooting-game/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shooting-game-service
  namespace: default
spec:
  selector:
    app: shooting-game
  ports:
    - port: 80
      targetPort: 80
