shooting-game/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shooting-game-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: shooting.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shooting-game-service
            port:
              number: 80
